Front criado com tela de login funcional. Backend com correcoes pontuais para validar email e senha corretamente